--- a/E-COMMERCE2.html
+++ b/E-COMMERCE2.html
@@ -646,7 +646,7 @@
             <div class="gal_details">
                 <h2>The ultimate Summer Fation is Here</h2>
                 <p>
-                    product Quality Products is here
+                    Good Quality Products 
                 </p>
                 <button>Explore Now</button>
             </div>
@@ -658,7 +658,7 @@
             <div class="gal_details">
                 <h2>The ultimate Summer Fation is Here</h2>
                 <p>
-                    product Quality Products is here
+                    Good Quality Product
                 </p>
                 <button>Explore Now</button>
             </div>
@@ -670,7 +670,7 @@
             <div class="gal_details">
                 <h2>The ultimate Summer Fation is Here</h2>
                 <p>
-                    product Quality Products is here
+                    Good Quality Products 
                 </p>
                 <button>Explore Now</button>
             </div>
@@ -682,7 +682,7 @@
             <div class="gal_details">
                 <h2>The ultimate Summer Fation is Here</h2>
                 <p>
-                    product Quality Products is here
+                    Good Quality Products 
                 </p>
                 <button>Explore Now</button>
             </div>
